--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -55,28 +55,17 @@
 <form action="" id="benCalc" onsubmit="return false;">
    <fieldset>
     <legend>Calculate your UI benefits when working part-time</legend>
-    <label>Size Of the Cake</label>
-    
+    <label>Enter your information</label>
+    <ol>
 	<li>Enter your benefits determination (the amount you receive in UI every week). (omit $ sign, commas; for example 32000 or 102900.98) $
-        <input title="Enter your benefits determination" type="number" name="benefits_determination" id="YRAverageSalary">
+        <input title="Enter your benefits determination" type="number" name="benefits_determination" id="benefits_determination">
      	</li>
 	<li><span class="style14"><strong>Enter</strong> your part-time work earnings (the amount you receive from your part-time job every week). (omit $ sign, commas; for example 32000 or 102900.98) $</span>
-        <input title="Enter your benefits determination" type="TEXT" name="YRAverageSalary2" id="YRAverageSalary2" disabled onChange="validateYRAverageSalary2(this),computeForm(yaC6690.value, BenefAgeYY.value, BenefAgeMM.value, militaryveteran.value, AmountOptionA.value, YRAverageSalary2.value)" size="10" maxlength="10" align="right">
+        <input title="Enter your part-time earnings" type="number" name="pt_earnings" id="pt_earnings" size="10" maxlength="10" align="right">
       	</li>
-	   <input type="radio"  name="selectedcake" value="Round6"
-    onclick="calculateTotal()" />
-    Round cake 6" -  serves 8 people ($20)
-    <input type="radio"  name="selectedcake" value="Round8"
-    onclick="calculateTotal()" />
-    Round cake 8" - serves 12 people ($25)
-    <input type="radio"  name="selectedcake" value="Round10"
-    onclick="calculateTotal()" />
-    Round cake 10" - serves 16 people($35)
-    <input type="radio"  name="selectedcake" value="Round12"
-    onclick="calculateTotal()" />
-    Round cake 12" - serves 30 people($75)
- 
-    <label >Filling</label>
+	   </ol>	    
+	  
+    <label>Filling</label>
  
     <select id="filling" name='filling'
     onchange="calculateTotal()">
