--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -60,47 +60,33 @@
 	<li>Enter your benefits determination (the amount you receive in UI every week). (omit $ sign, commas; for example 32000 or 102900.98) $
         <input title="Enter your benefits determination" type="number" name="benefits_determination" id="benefits_determination">
      	</li>
-	<li><span class="style14"><strong>Enter</strong> your part-time work earnings (the amount you receive from your part-time job every week). (omit $ sign, commas; for example 32000 or 102900.98) $</span>
+	<li><span class="style14">Enter your part-time work earnings (the amount you receive from your part-time job every week). (omit $ sign, commas; for example 32000 or 102900.98) $</span>
         <input title="Enter your part-time earnings" type="number" name="pt_earnings" id="pt_earnings" size="10" maxlength="10" align="right">
       	</li>
 	   </ol>	    
 	  
-    <label>Filling</label>
- 
-    <select id="filling" name='filling'
-    onchange="calculateTotal()">
-    <option value="None">Select Filling</option>
-    <option value="Lemon">Lemon($5)</option>
-    <option value="Custard">Custard($5)</option>
-    <option value="Fudge">Fudge($7)</option>
-    <option value="Mocha">Mocha($8)</option>
-    <option value="Raspberry">Raspberry($10)</option>
-    <option value="Pineapple">Pineapple($5)</option>
-    <option value="Dobash">Dobash($9)</option>
-    <option value="Mint">Mint($5)</option>
-    <option value="Cherry">Cherry($5)</option>
-    <option value="Apricot">Apricot($8)</option>
-    <option value="Buttercream">Buttercream($7)</option>
-    <option value="Chocolate Mousse">Chocolate Mousse($12)</option>
-   </select>
-    <br/>
-    <p>
-    <label for='includecandles' class="inlinelabel">
-    Include Candles($5)</label>
-    <input type="checkbox" id="includecandles" name='includecandles'
-    onclick="calculateTotal()" />
-   </p>
- 
-    <p>
-    <label class="inlinelabel" for='includeinscription'>
-    Include Inscription($20)</label>
-    <input type="checkbox" id="includeinscription"
-    name="includeinscription" onclick="calculateTotal()" />
- 
-    <input type="text"  id="theinscription"
-    name="theinscription" value="Enter Inscription"  />
-    </p>
-    <div id="totalPrice"></div>
+    <label>Estimated take-home amount</label>
+ <strong>REMINDER: If you work part-time hours during weeks in which you request unemployment benefits, you may still be paid benefits if your gross wages (total wages before taxes are deducted) are less than your weekly benefit amount. Any earnings greater than 1/3 of your weekly benefit amount (known as your earnings disregard) will be deducted dollar-for-dollar from your weekly benefit payment.</strong>
+  <div>&nbsp;</div>
+  <nav role="navigation">
+    <ol>
+      <li>
+        <div align="left" class="style14">Total weekly take-home amount: $
+          <input title="Total weekly take-home amount" type="number" name="tot_take_home" id="tot_take_home" size="10" maxlength="10" align="right">
+        </div>
+      </li><br>
+      <li>
+        <div align="left" class="style14">UI weekly take-home amount: $
+          <input title="UI weekly take-home amount" name="ui_take_home" type="number" id="ui_take_home" size="10" maxlength="10" align="right">
+        </div>
+        <div align="left"></div>
+      </li><br>
+      <li>
+        <div align="left" class="style14">Weekly part-time earnings: $
+          <input title="Weekly part-time earnings" name="pt_earnings" type="number" id="pt_earnings" size="10" maxlength="10" align="right">
+        </div>
+      </li><br>
+          </ol>
  
     </fieldset>
 </form>
