--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://s3.amazonaws.com/mayflower.digital.mass.gov/assets/css/index-generated.css" media="all" />  
   
 <script src="https://s3.amazonaws.com/mayflower.digital.mass.gov/assets/js/vendor/modernizr.js"></script> 
-<script language="JavaScript" type="text/javascript" src="pensionjscriptafter04022012.js"></script>
+<script language="JavaScript" type="text/javascript" src="benefits-calculator-v1.js"></script>
 
 <style type="text/css">
 <!--
