--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -55,6 +55,7 @@
 <form action="" id="benCalc" onsubmit="return false;">
    <fieldset>
     <legend>Calculate your UI benefits when working part-time</legend>
+	<strong>REMINDER: If you work part-time hours during weeks in which you request unemployment benefits, you may still be paid benefits if your gross wages (total wages before taxes are deducted) are less than your weekly benefit amount. Any earnings greater than 1/3 of your weekly benefit amount (known as your earnings disregard) will be deducted dollar-for-dollar from your weekly benefit payment.</strong>
     <label>Enter your information</label>
     <ol>
 	<li>Enter your benefits determination (the amount you receive in UI every week). (omit $ sign, commas; for example 32000 or 102900.98) $
@@ -65,25 +66,24 @@
       	</li>
 	   </ol>	    
 	  <button onclick="calcBenefits()">Compute</button>
-    <label>Estimated take-home amount</label>
- <strong>REMINDER: If you work part-time hours during weeks in which you request unemployment benefits, you may still be paid benefits if your gross wages (total wages before taxes are deducted) are less than your weekly benefit amount. Any earnings greater than 1/3 of your weekly benefit amount (known as your earnings disregard) will be deducted dollar-for-dollar from your weekly benefit payment.</strong>
+ <label>Estimated take-home amount</label>
   <div>&nbsp;</div>
   <nav role="navigation">
     <ol>
       <li>
-        <div align="left" class="style14">Total weekly take-home amount: $
-          <input title="Total weekly take-home amount" type="number" name="take_home" id="take_home" size="10" maxlength="10" align="right">
-        </div>
+	<div align="left" class="style14">Weekly part-time earnings: $
+          <input title="Your earnings disregard" name="earnings_disregard" type="number" id="earnings_disregard" size="10" maxlength="10" align="right">
+        </div>        
       </li><br>
       <li>
-        <div align="left" class="style14">UI weekly take-home amount: $
-          <input title="UI weekly take-home amount" name="benefits" type="number" id="benefits" size="10" maxlength="10" align="right">
+        <div align="left" class="style14">Net UI weekly take-home amount: $
+          <input title="Your net UI weekly take-home amount" name="benefits" type="number" id="benefits" size="10" maxlength="10" align="right">
         </div>
         <div align="left"></div>
       </li><br>
       <li>
-        <div align="left" class="style14">Weekly part-time earnings: $
-          <input title="Weekly part-time earnings" name="earnings" type="number" id="earnings" size="10" maxlength="10" align="right">
+ 	<div align="left" class="style14">Total weekly take-home amount: $
+          <input title="Total weekly take-home amount" type="number" name="take_home" id="take_home" size="10" maxlength="10" align="right">
         </div>
       </li><br>
           </ol>
