--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -66,12 +66,13 @@
       	</li>
 	   </ol>	    
 	  <button onclick="calcBenefits()">Compute</button>
- <label>Estimated take-home amount</label>
+	   <br>
+	   <label>Estimated take-home amount</label>
   <div>&nbsp;</div>
   <nav role="navigation">
     <ol>
       <li>
-	<div align="left" class="style14">Weekly part-time earnings: $
+	<div align="left" class="style14">Your earnings disregard: $
           <input title="Your earnings disregard" name="earnings_disregard" type="number" id="earnings_disregard" size="10" maxlength="10" align="right">
         </div>        
       </li><br>
