--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -73,6 +73,11 @@
   <nav role="navigation">
     <ol>
       <li>
+        <div align="left" class="style14">Your earnings disregard (how much you can earn before your benefits are decreased): $
+          <input title="Your earnings disregard" type="number" name="disregard" id="disregard" size="10" maxlength="10" align="right">
+        </div>
+      </li><br>
+	<li>
         <div align="left" class="style14">Total weekly take-home amount: $
           <input title="Total weekly take-home amount" type="number" name="take_home" id="take_home" size="10" maxlength="10" align="right">
         </div>
