--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -76,21 +76,16 @@
         <div align="left" class="style14">Your earnings disregard (how much you can earn before your benefits are decreased): $
           <input title="Your earnings disregard" type="number" name="disregard" id="disregard" size="10" maxlength="10" align="right">
         </div>
-      </li><br>
-	<li>
-        <div align="left" class="style14">Total weekly take-home amount: $
-          <input title="Total weekly take-home amount" type="number" name="take_home" id="take_home" size="10" maxlength="10" align="right">
-        </div>
-      </li><br>
+      </li><br>	
       <li>
-        <div align="left" class="style14">UI weekly take-home amount: $
+        <div align="left" class="style14">Your net weekly UI take-home amount: $
           <input title="UI weekly take-home amount" name="benefits" type="number" id="benefits" size="10" maxlength="10" align="right">
         </div>
         <div align="left"></div>
       </li><br>
-      <li>
-        <div align="left" class="style14">Weekly part-time earnings: $
-          <input title="Weekly part-time earnings" name="earnings" type="number" id="earnings" size="10" maxlength="10" align="right">
+	    <li>
+        <div align="left" class="style14">Your total weekly take-home amount (your net benefits plus your earnings): $
+          <input title="Total weekly take-home amount" type="number" name="take_home" id="take_home" size="10" maxlength="10" align="right">
         </div>
       </li><br>
           </ol>
