--- a/benefits-calculator-v1.html
+++ b/benefits-calculator-v1.html
@@ -54,7 +54,7 @@
 <!--Estimator codes begin-->
 <form action="" id="benCalc" onsubmit="return false;">
    <fieldset>
-	   <legend><h1>Calculate your UI benefits when working part-time</h1></legend>
+	   <legend><h1>UI benefits calculator for part-time workers</h1></legend>
 	   <strong>REMINDER: If you work part-time hours during weeks in which you request unemployment benefits, you may still be paid benefits if your gross wages (total wages before taxes are deducted) are less than your weekly benefit amount. Any earnings greater than 1/3 of your weekly benefit amount (known as your earnings disregard) will be deducted dollar-for-dollar from your weekly benefit payment.</strong>
 	   <br><br>
     <label>Enter your information</label>
